discussion-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discussion-service
  labels:
    app: discussion-service
spec:
  replicas: 1
  template:
    metadata:
      name: discussion-service
      labels:
        app: discussion-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: discussion-service
        image: muchacho3alex/rsodiscussionservice:latest
        resources:
          limits:
            cpu: 100m
            memory: 200M
        ports:
          - containerPort: 80
  selector:
    matchLabels:
      app: discussion-service
---
apiVersion: v1
kind: Service
metadata:
  name: discussion-cip-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: discussion-service
