transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 1
  template:
    metadata:
      name: transaction-service
      labels:
        app: transaction-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: transaction-service
        image: urban98/transaction-service-api:latest
        resources:
          limits:
            cpu: 100m
            memory: 200M
        ports:
          - containerPort: 80

  selector:
    matchLabels:
      app: transaction-service
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-cip-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: transaction-service
